@@ -193,20 +193,9 @@
                             <groupId>cc.jilt</groupId>
                             <artifactId>jilt</artifactId>
                             <version>${jilt.version}</version>
-                            <scope>provided</scope>
                         </annotationProcessorPath>
                     </annotationProcessorPaths>
-                    <fork>true</fork>
                     <compilerArgs>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                         <arg>-parameters</arg>
                     </compilerArgs>
                     <failOnError>true</failOnError>
@@ -230,6 +219,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.glassfish.tyrus</groupId>
+            <artifactId>tyrus-server</artifactId>
+            <version>2.1.3</version>
+        </dependency>
         <dependency>
             <groupId>cc.jilt</groupId>
             <artifactId>jilt</artifactId>
